@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ac77346a9fd261df44637b03c36076b3be8df1df ChangeLog
+SHA1 3de44de8d0ae26ece6a81ec4dfbeaeeff2656fbd ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 e55aad08463aa9a0ec76945c32436200462481eb META.yml
-SHA1 3e015f341f5f7ff17400b44cc9384bad83942c93 Makefile.PL
+SHA1 3a46fdc0ed61522c37eb521f9a333add39262a1d META.yml
+SHA1 6651d796866d2a72a6ac99d023d91ba8d4919f0e Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 a4e74085a37fdd9bfe221786b335f0c7662cbc46 bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 c0a76bce3746f0cd78ca1f1e537b3b56e29df2b3 lib/Net/FullAuto.pm
+SHA1 c5cfe976b9cc67a88986fdee3c9b46216dd98177 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -45,13 +45,13 @@ SHA1 2f5889b356d25c1f95b56a84ef9c63a6626282e9 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 4cffe8447a92a1248708fe86d06ac60b9db30478 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 f5e618dff484911180f567c9e3335acc23065ac1 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 41e64e354de4bf932f2e221ca7949c582e9e042e lib/Net/FullAuto/Distro/fa_menu_demo.pm
-SHA1 107289602624e6bbf1635be9e6ba85de7a3e009a lib/Net/FullAuto/FA_Core.pm
+SHA1 a4b907686f5cf844b3681f854ec4f26812be6059 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5wIBMACgkQdsVAdUjO9ImANgCghHBQJlNhOfdBfmsWKFOt1mjt
-qp0An1JcFEv3VX9X/XEXN3wPB6tJjQde
-=5+PT
+iEYEARECAAYFAk5x9s0ACgkQdsVAdUjO9Ik2ZwCgoV/HfubIrDud0G38cK6x1JtJ
+Fg4AoInpC2cnG2hflWyjZKKcKW2y3siv
+=ADR/
 -----END PGP SIGNATURE-----
