@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9970';
+our $VERSION='0.9971';
 
 
 use 5.005;
