@@ -45,6 +45,13 @@
 ################################################################
 
 
+2011-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9971 released.
+
+        * Completed work on fa --defaults functionality.
+
+
 2011-09-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9970 released.
